--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Forces IE to follow modern standards -->
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <title>I Love React</title>
+    <title></title>
     <meta name="description" content="">
 
     <!-- Disable zooming on mobile. Useful for responsive design. -->
@@ -20,7 +20,7 @@
 
 </head>
 <body>
-
+    <h1>I Love React</h1>
 
 <!-- <script src="js/app.js"></script> -->
 
