--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
 
@@ -16,13 +17,65 @@
 
     <!-- <link rel="apple-touch-icon" href="apple-touch-icon.png"> -->
 
-    <!-- <link rel="stylesheet" href="css/app.css"> -->
+    <link rel="stylesheet" href="css/app.css">
 
 </head>
-<body>
-    <h1>I Love React</h1>
 
-<!-- <script src="js/app.js"></script> -->
+<body>
+
+    <div class="section" id="page1">
+        <img class="react-logo" src="img/react-logo.svg" />
+        <h1>Build Native Apps With React</h1>
+        <div class="intro">
+            <a href="#native">
+                Native iOS
+            </a>
+
+            <a href="#touch">
+                Touch Handling
+            </a>
+
+            <a href="#async">
+                Asynchronous
+            </a>
+
+            <a href="#flex">
+                Flex &amp; Styling
+            </a>
+        </div>
+    </div>
+
+    <div class="section" id='page2'>
+        <div class="iphone-demo">
+            <img src="img/iphone-frame.svg" />
+        </div>
+
+        <div class="feature-description">
+            <h2>Native Experience</h2>
+            <p>
+                Takes advantage of native iOS components to give your app a consistent look and feel with the rest of the platform ecosystem, and keeps the quality bar high.
+            </p>
+        </div>
+    </div>
+
+    <div class="section" id='page3'>
+        <div class="iphone-demo">
+            <img src="img/iphone-frame.svg" />
+        </div>
+
+        <div class="feature-description">
+            <h2>Touches &amp; Gestures</h2>
+            <p>
+                React Native implements a powerful responder system to negotiate touches in complex view hierarchies. It allows you to build complex UI, and handle user interactions precisely.
+            </p>
+        </div>
+    </div>
+
+    <div class="section" id="page4">
+    <h1>Android Is Here</h1>
+    </div>
+    <!-- <script src="js/app.js"></script> -->
 
 </body>
+
 </html>
